--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.url=jdbc:mysql://soen344.cwtjkaidrsfz.us-east-2.rds.amazonaws.com/us_db?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=us_admin
+spring.datasource.password=usadmin123
 spring.jpa.generate-ddl=true
