--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,12 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@material/layout-grid": "^0.41.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.3",
+    "angular-calendar": "^0.26.6",
+    "angularx-flatpickr": "^6.1.0",
     "core-js": "^2.5.4",
+    "date-fns": "^1.30.1",
+    "flatpickr": "^4.5.2",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.3.3",
