--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://soen344.cwtjkaidrsfz.us-east-2.rds.amazonaws.
 spring.datasource.username=us_admin
 spring.datasource.password=usadmin123
 spring.jpa.generate-ddl=true
+spring.jackson.serialization.fail-on-empty-beans=false
